<resources>
    <string name="app_name">Klinik Care Mobile</string>
    <string name="app_name_text_1">Klinik</string>
    <string name="app_name_text_2">Care App</string>
    <string name="welcome_text">Selamat Datang,</string>
    <string name="welcome_text_2">Untuk melanjutkan, mohon pilih tipe pengguna berikut:</string>
    <string name="register_title">Buat Akun Baru!</string>
    <string name="login_title">Masuk ke Akun</string>
    <string name="register_desc">Lengkapi data dibawah ini untuk mendaftar</string>
    <string name="login_desc">Lengkapi data dibawah ini untuk masuk</string>
    <string name="email_text">Email</string>
    <string name="password_text">Kata Sandi</string>
    <string name="name_register">Nama Lengkap (sesuai KTP)</string>
    <string name="phone_register">+62 XXXXXXXXX</string>
    <string name="datebirth_register">Tanggal Lahir</string>
    <string name="nik_register">Nomor Induk Kependudukan (sesuai KTP)</string>
    <string name="nip_register">Nomor Induk Pegawai (NIP)</string>
    <string name="policy">Dengan mendaftar saya telah menyetujui Ketentuan dan Privasi pada layanan ini</string>
    <string name="card_text_antrian">Nomor Antrian Anda</string>
    <string name="card_text_antrian_2">Jumlah Antrian Tersisa</string>
    <string name="card_text_antrian_3">Total Jumlah Antrian</string>
    <string name="card_text_antrian_officer">Nomor Antrian Saat Ini</string>
    <string name="card_text_antrian_officer_2">Jumlah Antrian Menunggu</string>
    <string name="card_text_antrian_officer_3">Jumlah Antrian Selesai</string>
    <string name="jam_operasional">Jam Operasional</string>
    <string name="jam_operasional_value">08.00 - 17.00 WIB</string>
    <string name="user_role">PASIEN</string>
    <string name="officer_role">PETUGAS MEDIS</string>
    <string name="appointment_desc">Daftarkan diri Anda untuk mendapatkan nomor antrian dan terdaftar pada data rekam medis klinik.</string>
    <string name="warning_text">Pastikan hadir 15 menit sebelum waktu pemeriksaan yang telah Anda pilih.</string>
</resources>