<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        tools:context=".features.pasien.register.activity.register_user">

        <ImageView
            android:id="@+id/imageView"
            android:contentDescription="@string/app_name"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="20dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/logo_only"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button_outlined_rounded"
            android:text="MASUK"
            android:textStyle="bold"
            android:textColor="@color/primary_blue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/app_name_text_1"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/green"
            app:layout_constraintLeft_toRightOf="@id/imageView"
            app:layout_constraintTop_toTopOf="@id/imageView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_text_2"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/green"
            app:layout_constraintLeft_toRightOf="@id/imageView"
            app:layout_constraintTop_toBottomOf="@id/textView1"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/register_title_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@id/imageView"
            app:layout_constraintTop_toBottomOf="@id/imageView" />


        <TextView
            android:id="@+id/register_desc_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_desc"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/register_title_user"
            app:layout_constraintStart_toStartOf="@id/imageView" />

        <EditText
            android:id="@+id/email_register_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/form_background"
            android:ems="18"
            android:hint="@string/email_text"
            android:autofillHints="emailAddress"
            android:padding="15dp"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/register_desc_user"
            app:layout_constraintStart_toStartOf="@id/register_desc_user"
             />

        <EditText
            android:id="@+id/password_register_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="17dp"
            android:background="@drawable/form_background"
            android:ems="18"
            android:hint="@string/password_text"
            android:autofillHints="password"
            android:padding="15dp"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/email_register_user"
            app:layout_constraintStart_toStartOf="@id/register_desc_user"
            />

        <EditText
            android:id="@+id/name_register_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="17dp"
            android:background="@drawable/form_background"
            android:ems="18"
            android:hint="@string/name_register"
            android:autofillHints="name"
            android:padding="15dp"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/password_register_user"
            app:layout_constraintStart_toStartOf="@id/register_desc_user"
            />

        <EditText
            android:id="@+id/phone_register_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="17dp"
            android:background="@drawable/form_background"
            android:ems="18"
            android:hint="@string/phone_register"
            android:autofillHints="phone"
            android:padding="15dp"
            android:inputType="phone"
            app:layout_constraintTop_toBottomOf="@id/name_register_user"
            app:layout_constraintStart_toStartOf="@id/register_desc_user"
            />

        <EditText
            android:id="@+id/datebirth_register_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="17dp"
            android:background="@drawable/form_background"
            android:ems="18"
            android:hint="@string/datebirth_register"
            android:padding="15dp"
            android:inputType="date"
            android:clickable="true"
            app:layout_constraintTop_toBottomOf="@id/phone_register_user"
            app:layout_constraintStart_toStartOf="@id/register_desc_user"
            />

        <EditText
            android:id="@+id/nik_register_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="17dp"
            android:background="@drawable/form_background"
            android:ems="18"
            android:hint="@string/nik_register"
            android:inputType="number"
            android:padding="15dp"
            app:layout_constraintStart_toStartOf="@id/register_desc_user"
            app:layout_constraintTop_toBottomOf="@id/datebirth_register_user" />

        <TextView
            android:id="@+id/policy_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/policy"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/nik_register_user"
            app:layout_constraintStart_toStartOf="@id/imageView" />

        <Button
            android:id="@+id/button_register_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button_rounded"
            android:text="DAFTAR"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/policy_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>