<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.roles.Roles">


    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/app_name"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_margin="20dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/logo_only"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/app_name_text_1"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/green"
        app:layout_constraintLeft_toRightOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_text_2"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/green"
        app:layout_constraintLeft_toRightOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@id/textView1"
        android:layout_marginStart="10dp"/>


    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@id/imageView" />


    <TextView
        android:id="@+id/welcome_text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text_2"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/welcome_text"
        app:layout_constraintStart_toStartOf="@id/imageView" />


    <ImageView
        android:id="@+id/officer_images"
        android:layout_width="152dp"
        android:layout_height="219dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:contentDescription="Officer"
        android:focusable="true"
        android:src="@drawable/img_officer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/user_images"
        app:layout_constraintTop_toBottomOf="@id/welcome_text_2" />

    <ImageView
        android:id="@+id/user_images"
        android:layout_width="152dp"
        android:layout_height="219dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:contentDescription="Officer"
        android:focusable="true"
        android:src="@drawable/img_user"
        app:layout_constraintStart_toEndOf="@id/officer_images"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_text_2" />

    <Button
        android:id="@+id/button_splashscreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/button_rounded"
        android:text="LANJUT"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>



