<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.petugas.antrian.activity.daftar_pemeriksaan">

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/app_name"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_margin="20dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/logo_only"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/welcome_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nomor Antrian"
        android:textSize="12sp"
        android:textStyle="normal"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/officerName"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/officerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pemeriksaan Dokter"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/app_name_text_1"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/green"
        app:layout_constraintLeft_toRightOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_text_2"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/green"
        app:layout_constraintLeft_toRightOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@id/textView1"
        android:layout_marginStart="10dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/head_recycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_white_rounded"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toBottomOf="@id/imageView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Status: Dalam Antrian"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/jumlahAntrian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="4 Antrian"
                android:textColor="@color/primary_blue"
                android:textStyle="bold" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/head_recycle">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_checkup_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="4"
            tools:listitem="@layout/card_checkup_recycler"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>