<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.pasien.appointment.activity.ticket_info">
    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/app_name"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_margin="20dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/logo_only"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/welcome_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nomor Antrian"
        android:textSize="12sp"
        android:textStyle="normal"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/officerName"
        app:layout_constraintEnd_toEndOf="parent"
/>

    <TextView
        android:id="@+id/officerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pemeriksaan Dokter"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/app_name_text_1"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/green"
        app:layout_constraintLeft_toRightOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_text_2"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/green"
        app:layout_constraintLeft_toRightOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@id/textView1"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/textWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/warning_text"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:background="@drawable/button_red_rounded"
        android:paddingHorizontal="10dp"
        android:paddingVertical="15dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintEnd_toEndOf="@id/officerName"
        app:layout_constraintStart_toStartOf="@id/imageView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_ticket_info"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:backgroundTint="@color/light_grey"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/textWarning"
        app:layout_constraintEnd_toEndOf="@id/officerName"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:paddingHorizontal="20dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/textTitleTicket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nomor Antrian Anda"
                android:textSize="20dp"
                android:textColor="@color/primary_blue"
                android:textStyle="bold"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textValueTicket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="003"
                android:textSize="90dp"
                android:textColor="@color/primary_blue"
                android:textStyle="bold"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textNameValueTicket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Santa Silalahi"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textDatetimeValueTicket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="10/12/2024 - 10.00 WIB"
                android:textSize="17dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAlignment="center" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/cancel_button_ticket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="BATALKAN"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/button_red_rounded"
        app:layout_constraintTop_toBottomOf="@id/card_ticket_info" />

    <Button
        android:id="@+id/button_back_ticketInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/button_rounded"
        android:text="KEMBALI"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>